<resources>
    <string name="app_name">AppBanking</string>
    <string name="home">Trang Chủ</string>
    <string name="history">Lịch Sử</string>
    <string name="notification">Thông Báo</string>
    <string name="profile">Hồ Sơ</string>
    <string name="card_service">Dịch Vụ Thẻ</string>
    <string name="m_commerce">Mua Sắm</string>
    <string name="m_payment">Thanh Toán</string>
    <string name="m_transfer">Chuyển Tiền</string>
    <string name="bca_34298493583">VCB - 34298493583</string>
    <string name="_154_50">+ 150.000 VNĐ</string>
    <string name="last_activity">Hoạt Động Gần Đây</string>
    <string name="let_s_action">Hãy Hành Động</string>
    <string name="_08_24">08/24</string>
    <string name="valid_thru">Ngày Hợp Lệ</string>
    <string name="emanh">EManh</string>
    <string name="name">Tên</string>
    <string name="copy">Sao Chép</string>
    <string name="_2459702663">2459702663</string>
    <string name="account_number">Số Tài Khoản</string>
    <string name="_2606_78">9.250</string>
    <string name="your_balance">Số Dư Tài Khoản</string>
    <string name="hello">Xin Chào</string>
    <string name="input_name">Họ và tên</string>
    <string name="input_account_number">Số tài khoản</string>
    <string name="input_date">Ngày sinh</string>
    <string name="input_cccd">Số CCCD</string>
    <string name="input_phone">Số điện thoại</string>
    <string name="input_password">Mật khẩu</string>
    <string name="input_email">Email</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="info_sign_up">Thông Tin Đăng Ký</string>
    <string name="forgot_password">Quyên Mật Khẩu?</string>
    <string name="enter_account">Bạn hãy nhập tài khoản để Đăng Nhập</string>
    <string name="you_not_account">Không có Tài Khoản?</string>
    <string name="check_box">Tôi đồng ý với các điều kiện và điều khoản đăng ký dịch vụ.</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="logout">Đăng Xuất</string>
    <string name="transfer_money">Chọn người thụ hưởng</string>
    <string name="continue1">Tiếp tục</string>
    <string name="money">Số tiền</string>
    <string name="content">Nội dung giao dịch</string>
    <string name="_0">0</string>
    <string name="vn">VNĐ</string>
    <string name="success">Giao dịch thành công</string>
    <string name="content1">Quý khách đã chuyển khoản thành công số tiền 30,000 VNĐ đến số tài khoản 0000000000 / PHAN KHAC MANH vào lúc 27/09/2023 21:30:34. Nội dung: Chuển tiền</string>
    <string name="transfer_successfully">Quý khách đã chuyển khoản thành công</string>
    <string name="save">Lưu ảnh</string>
    <string name="share">Chia sẻ</string>
    <string name="complete">Hoàn thành giao dịch</string>
    <string name="fluctuations">Biến động</string>
    <string name="individual">Cá nhân</string>
    <string name="image_profile">Đổi ảnh đại diện</string>
    <string name="setting">Cài đặt nâng cao</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="change_email">Thay đổi email</string>
    <string name="change_name">Thay đổi tên tài khoản</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="save_change">Lưu thay đổi</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_email">Nhập email mới</string>
    <string name="qr_code">Quét mã QR</string>
    <string name="link">Link</string>
    <string name="code_qr_you">Mã QR của bạn</string>
</resources>