<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/menuHistory"
        android:title="@string/history"
        android:icon="@drawable/ic_history" />

    <item
        android:id="@+id/qrcode"
        android:checkable="false"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/menuNotification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification" />

    <item
        android:id="@+id/menuProfile"
        android:title="@string/profile"
        android:icon="@drawable/ic_user" />
</menu>